--- a/common.toml
+++ b/common.toml
@@ -1,4 +1,9 @@
 
+["Mod Options"]
+	#Set this to true if you wish to live life on the edge!
+	#Seriously though it is recommended this only be used for testing purposes!!!
+	bypassPerformantCheck = false
+
 ["Bee Options"]
 	#
 	#Should bees die from stinging?
@@ -8,6 +13,11 @@
 	#Should bees die when their Y-level is below 0?
 	#Note: If false, bees will get stuck just below y-0 and not move. **May not be useful with new AI**
 	beeDiesInVoid = true
+	#
+	#This is an experimental setting. Using this setting means bees will need to be told by the player which flower and hive to use.
+	#Bees will not scan surroundings for flowers or hives and will instead go to their designated spot until changed.
+	#WARNING: For now, this will prevent bees from having their wander goal attached which effectively makes them dumb (seriously, they'll just hover in one spot), however it would also significantly improve performance until pathfinding can be optimized.
+	use_experimental_manual_mode = false
 	#
 	#This value scales the child size for all Resource Bees.
 	#Range: 1.0 ~ 2.0
@@ -76,6 +86,39 @@
 	#Set to false if you don't want the custom honey fluids to be generated [true/false]
 	generateHoneyFluids = true
 
+["Ender Beecon Options"]
+	#
+	#If true, the below values will be multiplied with the base value, if false they will be added instead.
+	beeconDoMultiplier = true
+	#
+	#Multiplier for the drain rate for the Ender Beecon when the Water Breathing effect is active.
+	#Range: 1.0 ~ 128.0
+	beeconWaterBreathingValue = 1.5
+	#
+	#Range in blocks added for each effect that is currently active.
+	#Range: 1 ~ 25
+	beeconRangePerEffect = 10
+	#
+	#The amount of fluid per tick the Ender Beecon can pull from below blocks.
+	#Range: 1 ~ 16000
+	beeconPullAmount = 250
+	#
+	#Multiplier for the drain rate for the Ender Beecon when the Calming effect is active.
+	#Range: 1.0 ~ 128.0
+	beeconCalmingValue = 2.0
+	#
+	#The base drain rate for the Ender Beecon when an effect is active.
+	#Range: 1 ~ 128
+	beeconBaseDrain = 1
+	#
+	#Multiplier for the drain rate for the Ender Beecon when the Fire Resistance effect is active.
+	#Range: 1.0 ~ 128.0
+	beeconFireResistanceValue = 2.0
+	#
+	#Multiplier for the drain rate for the Ender Beecon when the Regeneration effect is active.
+	#Range: 1.0 ~ 128.0
+	beeconRegenerationValue = 2.5
+
 ["Centrifuge Options"]
 	#
 	#Amount of hunger the player uses per click on mechanical centrifuge.
@@ -127,6 +170,11 @@
 
 ["General Options"]
 	#
+	#Multiplier to the amount of ticks needed to process honey into honey blocks in the congealer.
+	#This value is multiplying the honeyProcessTime.
+	#Range: 1 ~ 16
+	congealerTimeMultiplier = 4
+	#
 	#Sets the max durability for the smoker
 	#Range: 100 ~ 5000
 	smokerDurability = 1000
@@ -139,12 +187,20 @@
 	#At a later time we will look into either combining with the Forge system or making the Forge system data pack capable.
 	useForgeBiomeDictionaries = false
 	#
+	#Amount of time in ticks required to finish processing a honey bottle.
+	#Range: 0 ~ 2400
+	honeyProcessTime = 5
+	#
 	#Set to true if you want easter egg bees to generate (WIP) [true/false]
 	#The only easter egg bee currently available is the Oreo bee
 	enableEasterEggBees = true
 	#
 	#Set to true to hide certain data in the Beepedia until the player has unlocked the bee. [true/false]
 	beepediaHideLocked = false
+	#
+	#Amount of honey Honey Pipes can transfer per tick.
+	#Range: 10 ~ 16000
+	maxHoneyPipeFlow = 250
 	#
 	#Set this to false when you want to overwrite the default bee files. [true/false]
 	#This should be run at least once for initial generation.
@@ -217,42 +273,4 @@
 	#The amount of saturation restored when eating a honeycomb.
 	#Range: 0.0 ~ 8.0
 	honeycombSaturation = 0.6
-
-["Ender Beecon Options"]
-	#
-	#If true, the below values will be multiplied with the base value, if false they will be added instead.
-	beeconDoMultiplier = true
-	#
-	#Multiplier for the drain rate for the Ender Beecon when the Water Breathing effect is active.
-	#Range: 1.0 ~ 128.0
-	beeconWaterBreathingValue = 1.5
-	#
-	#Range in blocks added for each effect that is currently active.
-	#Range: 1 ~ 25
-	beeconRangePerEffect = 10
-	#
-	#The amount of fluid per tick the Ender Beecon can pull from below blocks.
-	#Range: 1 ~ 16000
-	beeconPullAmount = 250
-	#
-	#Multiplier for the drain rate for the Ender Beecon when the Calming effect is active.
-	#Range: 1.0 ~ 128.0
-	beeconCalmingValue = 2.0
-	#
-	#The base drain rate for the Ender Beecon when an effect is active.
-	#Range: 1 ~ 128
-	beeconBaseDrain = 1
-	#
-	#Multiplier for the drain rate for the Ender Beecon when the Fire Resistance effect is active.
-	#Range: 1.0 ~ 128.0
-	beeconFireResistanceValue = 2.0
-	#
-	#Multiplier for the drain rate for the Ender Beecon when the Regeneration effect is active.
-	#Range: 1.0 ~ 128.0
-	beeconRegenerationValue = 2.5
-
-["Mod Options"]
-	#Set this to true if you wish to live life on the edge!
-	#Seriously though it is recommended this only be used for testing purposes!!!
-	bypassPerformantCheck = false
 
